5/5.05/pingpong/manifests/knative/knative-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: app-2-db
spec:
  template:
    metadata:
      name: app-2-db-app
    spec:
      containers:
        - image: docker.io/jylhakos/app-2-db:v4.02
          ports:
            - containerPort: 8080
            #-containerPort: 3001
          env:
            - name: DB_HOST
              value: postgresql-svc
          envFrom:
            - configMapRef:
                name: app-db-env
          livenessProbe:
            httpGet:
              path: /healthz
          readinessProbe:
            httpGet:
              path: /healthz
